--- a/PDP/PDP/Views/Doctors/Create.cshtml
+++ b/PDP/PDP/Views/Doctors/Create.cshtml
@@ -9,13 +9,10 @@
 {
     @Html.AntiForgeryToken()
     
-    
+    <br/>
 <div class="form-horizontal">
     <div style="display:inline-block" class="control-label col-md-4">
-        <h4>Add a new doctor!</h4>
-    </div>
-    <div style="float:right;">
-        <a class="btn btn-warning" href="/Doctors">Return</a>
+        <h2>Add a new doctor...</h2>
     </div>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -103,13 +100,14 @@
     </div>
 
     <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-success" />
-        </div>
+		<div class="col-md-offset-2 col-md-10">
+			<input type="submit" value="Create" class="btn btn-success" />
+				<a class="btn btn-info" href="/Doctors">Back</a>
+		</div>
     </div>
 </div>
 }
-
+<br/><hr/>
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
