--- a/PDP/PDP/Views/Consultations/Edit.cshtml
+++ b/PDP/PDP/Views/Consultations/Edit.cshtml
@@ -3,8 +3,8 @@
 @{
     ViewBag.Title = "Edit";
 }
-
-<h2>Edit</h2>
+<br />
+<h2>Edit the booking</h2>
 
 <div class="text-danger">@ViewBag.ConsultationCreateError</div>
 
@@ -14,7 +14,6 @@
     @Html.HttpMethodOverride(HttpVerbs.Put)
 
     <div class="form-horizontal">
-        <h4>Specializations</h4>
         <hr />
 
         <p>@ViewBag.firstName @ViewBag.secondName</p>
@@ -53,15 +52,15 @@
 
         <div class="row">
             <div class="col-sm-1">
-                <input type="submit" value="Create" class="btn btn-success" />
+                <input type="submit" value="Done" class="btn btn-success" />
             </div>
             <div class="col-sm-1">
-                <a class="btn btn-warning" href="/Consultations">Abort</a>
+                <a class="btn btn-warning" href="/Consultations">Back</a>
             </div>
         </div>
     </div>
 }
-
+<br /><hr/>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
