--- a/PDP/PDP/Views/Home/Contact.cshtml
+++ b/PDP/PDP/Views/Home/Contact.cshtml
@@ -1,17 +1,55 @@
-﻿@{
-    ViewBag.Title = "Contact";
+﻿@if (TempData.ContainsKey("message"))
+{
+	<h1>@ViewBag.message</h1>
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
-    <abbr title="Phone">P:</abbr>
-    425.555.0100
-</address>
+<style>
+	h1 {
+		color: darkblue;
+	}
 
-<address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
-</address>
+	img {
+		border: 3px dashed indianred;
+	}
+</style>
+<body>
+	@if (TempData.ContainsKey("message"))
+	{
+		<h1 class="text-center"> @ViewBag.message&nbsp;</h1>
+		<br />
+	}
+<br /><h2 class="text-center">How to get to us?</h2><br /><br />
+
+	<div class="container-fluid">
+				<div style="width: 100%">
+					<div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=STRADA ACADEMIEI&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://formatjson.org/">format json</a></div>
+					<style>
+						.mapouter {
+							position: relative;
+							text-align: right;
+							width: 100%;
+							height: 400px;
+						}
+
+						.gmap_canvas {
+							overflow: hidden;
+							background: none !important;
+							width: 100%;
+							height: 400px;
+						}
+
+						.gmap_iframe {
+							height: 400px !important;
+						}
+					</style></div>
+				</div><br />
+				<h2 class="text-center">Our time:</h2>
+				<h4 style="text-align:center">Monday - Friday: 00:00-23:59</h4>
+				&nbsp;
+				<h4 style="text-align:center">Saturday: 00:00-23:59</h4>
+				&nbsp;
+				<h4 style="text-align:center">Sunday: 00:00-23:59</h4>
+				&nbsp;<br />
+	</div>				
+</body>
+<hr/>
