--- a/PDP/PDP/Views/Home/Index.cshtml
+++ b/PDP/PDP/Views/Home/Index.cshtml
@@ -1,30 +1,64 @@
-﻿@{
-    ViewBag.Title = "Home Page";
-}
-
-<div class="jumbotron">
-    <h1>Portal Doctor Patient</h1>
-    <p class="lead">Taking care of your health.</p>
+﻿<style>
+	.carousel-control-next,
+	.carousel-control-prev,
+	.carousel-indicators {
+		filter: invert(100%);
+	}
+</style>
+<div class="text-center align-items-center justify-content-center mb-3"><br>
+	<h1 class="text-center">PDP GROUP</h1><br />
+	<div class="container-fluid">
+		<div class="row row-cols-1 row-cols-lg-2 row-cols-md-1 row-cols-sm-1 row-cols-xl-2">
+			<div>
+				<h2 >We care about you</h2><br>
+				<h4 style="padding-left:10px; padding-right:10px">Contrary to popular belief, Lorem Ipsum is not simply random text. Its roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.Many desktop publishing packages and web page editors now use Lorem Ipsum and a search for 'lorem ipsum' will uncover many web sites still in their infancy. </h4><br />
+			</div>
+			<div>
+				<img class="card-img-top" src="https://cdn.systematic.com/media/g0sj1tbg/hospital-building-001-global.jpg?mode=crop&width=1200&height=630&center=" alt="outside-hospital" />
+			</div>
+		</div>
+	</div><br /><br />
+	<div class="container-fluid">
+		<div class="row row-cols-1 row-cols-lg-2 row-cols-md-2 row-cols-sm-1 row-cols-xl-2">
+			<div>
+				<img class="card-img-top" src="https://i0.wp.com/mississippitoday.org/wp-content/uploads/2018/10/hospital-stock.jpg?ssl=1" alt="inside-hospital" />
+			</div>
+			<div>
+				<h2>
+					The best doctor
+				</h2><br>
+					 <h4 style="padding-left:10px; padding-right:10px">Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source.The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested.</h4><br />
+			</div>
+		</div>
+	</div>
 </div>
-
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+<br />
+<br />
+<div class="text-center mb-3">
+	<div id="carouseloppinions" class="carousel slide" data-ride="carousel">
+		<div class="carousel-inner">
+			<div class="carousel-item active">
+				<h4>"I was saved by a very good team. Also the site is nice."<br /></h4> <h6><span class="text-muted">Mike Thomas, Lawyer, Bucharest</span></h6>&nbsp;
+			</div>
+			<div class="carousel-item">
+				<h4>"I found everything I needed."<br></h4><h6><span class="text-muted">Vicentio Thomas, Entrepreneur, Las Vegas</span></h6>&nbsp;
+			</div>
+			<div class="carousel-item">
+				<h4>"5 out of 5. Great website! I really like it!"<br></h4><h6><span class="text-muted">Ed Pavlone, Postman, Miami</span></h6>&nbsp;
+			</div>
+		</div>
+		<a class="carousel-control-prev" href="#carouseloppinions" role="button" data-slide="prev">
+			<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+			<span class="sr-only">Previous</span>
+		</a>
+		<a class="carousel-control-next" href="#carouseloppinions" role="button" data-slide="next">
+			<span class="carousel-control-next-icon" aria-hidden="true"></span>
+			<span class="sr-only">Next</span>
+		</a>&nbsp;
+		<ol class="carousel-indicators text-light">
+			<li data-target="#carouseloppinions" data-slide-to="0" class="active" style="color:black"></li>
+			<li data-target="#carouseloppinions" data-slide-to="1" style="color:black"></li>
+			<li data-target="#carouseloppinions" data-slide-to="2" style="color:black"></li>
+		</ol>
+	</div>
 </div>
