--- a/PDP/PDP/Views/Shared/_Layout.cshtml
+++ b/PDP/PDP/Views/Shared/_Layout.cshtml
@@ -14,37 +14,55 @@ a {
 }
 </style>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container" style="float:left;">
-            <div class="navbar-header">
-                <img type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse" src="https://banner2.cleanpng.com/20180628/zaz/kisspng-computer-icons-hamburger-button-menu-new-menu-5b34724be5a1f0.5796308115301637879406.jpg" style="height:1.5em;"/>
-            </div>
-            <div class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Doctors", "Index", "Doctors")</li>
-                    <li>@Html.ActionLink("Consulations", "Index", "Consultations")</li>
+	<nav class="navbar navbar-expand-lg fixed-top navbar-dark" style="background-color: #04281f;">
+		<a class="navbar-brand" href="/Home/Index">PDP Group</a>
+		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+			<span class="navbar-toggler-icon"></span>
+		</button>
 
-                    @if (User.IsInRole("Admin"))
-                    {
-                        <li>@Html.ActionLink("Specializations", "Index", "Specializations")</li>
-                    }
-                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                </ul>
-                @Html.Partial("_LoginPartial")
-            </div>
-        </div>
-    </nav>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; PDP-Team</p>
-        </footer>
-    </div>
+		<div class="navbar-collapse collapse" id="navbarSupportedContent" style="background-color: #04281d; height:5.5vh;">
+			<ul class="navbar-nav mr-auto">
+				<li class="nav-item"><a class="nav-link" href="/Doctors/Index">Doctors</a></li>
+				<li class="nav-item"><a class="nav-link" href="/Specializations/Index">Specializations</a></li>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
-    @RenderSection("scripts", required: false)
+				@if (User.IsInRole("User") || User.IsInRole("Admin"))
+				{
+					<li class="nav-item"><a class="nav-link" href="/Consultations/Index">Your consultations</a></li>
+				}
+			</ul>
+			@Html.Partial("_LoginPartial")
+		</div>
+	</nav>
+	<div class="container body-content responsive">
+		<br />
+		@RenderBody()
+
+		<div class="foot">
+			<footer class="text-center bg-light text-dark">
+				<div class="container p-3">
+					<section>
+						<div class="row">
+							<div class="col-lg-4 col-md-4 mb-4 mb-md-0 text-center">
+								<a href="/Home/Index" class="text-uppercase text-center" style="color:black"><strong>Home</strong></a>
+							</div>
+							<div class="col-lg-4 col-md-4 mb-4 mb-md-0">
+								<a href="/Home/About" class="text-uppercase" style="color:black"><strong>About us</strong></a>
+							</div>
+							<div class="col-lg-4 col-md-4 mb-4 mb-md-0">
+								<a href="/Home/Contact" class="text-uppercase" style="color:black"><strong>Contact</strong></a>
+							</div>
+						</div>
+					</section>
+
+				</div>
+				<div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.05);">
+					&copy; @DateTime.Now.Year - <strong>PDP Team</strong>
+				</div>
+			</footer>
+		</div>
+	</div>
+	@Scripts.Render("~/bundles/jquery")
+	@Scripts.Render("~/bundles/bootstrap")
+	@RenderSection("scripts", required: false)
 </body>
 </html>
