--- a/PDP/PDP/Views/Specializations/Edit.cshtml
+++ b/PDP/PDP/Views/Specializations/Edit.cshtml
@@ -8,8 +8,8 @@
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
-        <h4>Edit specialization</h4>
+    <div class="form-horizontal"><br />
+        <h3>Edit specialization</h3>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.SpecializationID)
@@ -32,7 +32,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-success" />
+				<button class="btn btn-warning justify-content-center" type="submit">Modify category</button>
             </div>
         </div>
     </div>
