--- a/PDP/PDP/Views/Account/Register.cshtml
+++ b/PDP/PDP/Views/Account/Register.cshtml
@@ -30,8 +30,26 @@
         </div>
     </div>
     <div class="form-group">
+        @Html.LabelFor(m => m.address, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.address, new { @class = "form-control" })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.city, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.city, new { @class = "form-control" })
+        </div>
+    </div>
+    <div class="form-group">
+        @Html.LabelFor(m => m.country, new { @class = "col-md-2 control-label" })
+        <div class="col-md-10">
+            @Html.TextBoxFor(m => m.country, new { @class = "form-control" })
+        </div>
+    </div>
+    <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-			<button class="btn btn-info justify-content-center" type="submit">Register</button>
+            <button class="btn btn-info justify-content-center" type="submit">Register</button>
         </div>
     </div>
 }
