--- a/PDP/PDP/Views/Specializations/Create.cshtml
+++ b/PDP/PDP/Views/Specializations/Create.cshtml
@@ -1,50 +1,22 @@
-﻿@model PDP.Models.Specialization
-
-@{
-	ViewBag.Title = "Create a new specialization";
-}
-<br />
-<h2 class="text-center">Create a new specialization</h2>
+﻿<h2 class="text-center">Add Specialization</h2>
 <br />
 
-
-@using (Html.BeginForm())
-{
-	@Html.AntiForgeryToken()
-
-	<div class="form-horizontal">
-		<hr />
-		@Html.ValidationSummary(true, "", new { @class = "text-danger" })
-		<div class="form-group">
-			@Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2" })
-			<div class="col-md-10">
-				@Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
-				@Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
-			</div>
-		</div>
-
-		<div class="form-group">
-			@Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-			<div class="col-md-10">
-				@Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-				@Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-			</div>
-		</div>
-
-		<div class="form-group">
-			<div class="col-md-offset-2 col-md-10">
-				<button type="submit" class="btn btn-success justify-content-center fa fa-plus">Add specialization</button>
-			</div>
-			<br />
-			<div class="col-md-offset-2 col-md-10">
-				<a class="btn btn-info" href="/Specializations/Index">Back</a>
-			</div>
-		</div>
-	</div>
-	<hr />
-}
-
-
-@section Scripts {
-	@Scripts.Render("~/bundles/jqueryval")
-}
+<form method="post" action="/Specializations/Create">
+        <div class="form-group">
+            @Html.Label("Name", "Specialization Name", new { @class = "text-center" })
+            <br />
+            @Html.TextBox("Name", null, new { @class = "form-control" })
+            <br />
+        </div>
+        <div class="form-group">
+            @Html.Label("Price", "Specialization Price")
+            <br />
+            @Html.TextBox("Price", null, new { @class = "form-control" })
+        </div>
+    <div class="row text-center">
+        <div class="col-md-12">
+            <button class="btn btn-sm btn-success justify-content-center" type="submit">Add Spec</button>
+        </div>
+    </div>
+    <br />
+</form>
