--- a/PDP/PDP/Views/Specializations/Edit.cshtml
+++ b/PDP/PDP/Views/Specializations/Edit.cshtml
@@ -1,43 +1,28 @@
 ﻿@model PDP.Models.Specialization
+<h2 class="text-center">Edit spec</h2>
+<br />
 
-@{
-    ViewBag.Title = "Edit";
-}
+<form method="post" action="/Specializations/Edit/@Model.SpecializationID">
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal"><br />
-        <h3>Edit specialization</h3>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.SpecializationID)
+    @Html.HttpMethodOverride(HttpVerbs.Put)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Price, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Price, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Price, "", new { @class = "text-danger" })
-            </div>
-        </div>
+    @Html.HiddenFor(m => m.SpecializationID)
+    <div class="form-group ">
+        @Html.Label("Name", "Specialization Name")
+        @Html.ValidationMessageFor(m => m.Name, " *", new { @class = "text-danger " })
+        @Html.TextBox("Name", null, new { @class = "form-control" })
+        <br />
+    </div>
+    <div class="form-group">
+        @Html.Label("Price", "Specialization Price")
+        @Html.ValidationMessageFor(m => m.Price, " *", new { @class = "text-danger" })
+        @Html.TextBox("Price", null, new { @class = "form-control" })
+    </div><br />
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-				<button class="btn btn-warning justify-content-center" type="submit">Modify category</button>
-            </div>
+    <div class="row text-center">
+        <div class="col-md-12">
+            <button class="btn btn-success justify-content-center" type="submit">Modify spec</button>
         </div>
     </div>
-}
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+    <br />
+</form>
