--- a/PDP/PDP/Views/Home/About.cshtml
+++ b/PDP/PDP/Views/Home/About.cshtml
@@ -4,24 +4,4 @@
 	<br />
 }
 <br />
-<div class="jumbotron text-center text-light" style="background-color:#04281d;">
-	<div class="container">
-		<h1 class="display-4">PDP GROUP</h1>
-		<p class="lead">"Ah, ha, ha, ha, stayin' alive, stayin' alive"</p>
-	</div>
-</div>
-<div class="card text-center">
-	<div class="card-header">
-		<h2>About us</h2>
-	</div>
-	<ul class="list-group list-group-flush">
-		<li class="list-group-item text-center">
-			<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
-			<p>It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-		</li>
-		<li class="list-group-item text-center">
-			<h3 style="text-align:center">Careers</h3>
-			<p class="pa" style="text-align:center">You can send your CV to pdp.team.fiction@s.unibuc.ro or call us at +40 700 111 222 333</p>
-		</li>
-	</ul>
-</div>
+<p>Some text here.</p>
