--- a/PDP/PDP/Views/Doctors/Edit.cshtml
+++ b/PDP/PDP/Views/Doctors/Edit.cshtml
@@ -1,115 +1,58 @@
 ﻿@model PDP.Models.Doctor
+<h2 class="text-center">Edit doc</h2>
+<br />
 
-@{
-    ViewBag.Title = "Edit";
-}
+<form method="post" action="/Doctors/Edit/@Model.DoctorId">
 
-@using (Html.BeginForm())
-{
-    @Html.AntiForgeryToken()
+    @Html.HttpMethodOverride(HttpVerbs.Put)
 
-    <br/>
-<div class="form-horizontal">
-    <div style="display:inline-block" class="control-label col-md-4">
-        <h2>Editing a doctor</h2>
+    @Html.HiddenFor(m => m.SpecializationID)
+    <div class="form-group ">
+        @Html.Label("FirstName", "FirstName")
+        @Html.ValidationMessageFor(m => m.FirstName, " *", new { @class = "text-danger " })
+        @Html.TextBox("FirstName", null, new { @class = "form-control" })
+        <br />
     </div>
-    
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    @Html.HiddenFor(model => model.DoctorId)
-
+    <div class="form-group ">
+        @Html.Label("SecondName", "SecondName")
+        @Html.ValidationMessageFor(m => m.SecondName, " *", new { @class = "text-danger " })
+        @Html.TextBox("SecondName", null, new { @class = "form-control" })
+        <br />
+    </div>
+    <div class="form-group ">
+        @Html.Label("IsAvailable", "IsAvailable")
+        @Html.ValidationMessageFor(m => m.IsAvailable, " *", new { @class = "text-danger " })
+        @Html.TextBox("IsAvailable", null, new { @class = "form-control" })
+        <br />
+    </div>
+    <div class="form-group ">
+        @Html.Label("PriceRate", "PriceRate")
+        @Html.ValidationMessageFor(m => m.PriceRate, " *", new { @class = "text-danger " })
+        @Html.TextBox("PriceRate", null, new { @class = "form-control" })
+        <br />
+    </div>
+    <div class="form-group ">
+        @Html.Label("PhoneNumber", "PhoneNumber")
+        @Html.ValidationMessageFor(m => m.PhoneNumber, " *", new { @class = "text-danger " })
+        @Html.TextBox("PhoneNumber", null, new { @class = "form-control" })
+        <br />
+    </div>
+    <div class="form-group ">
+        @Html.Label("Email", "Email")
+        @Html.ValidationMessageFor(m => m.Email, " *", new { @class = "text-danger " })
+        @Html.TextBox("Email", null, new { @class = "form-control" })
+        <br />
+    </div>
     <div class="form-group">
-        <div class="control-label col-md-2">
-            <h6>First name</h6>
-        </div>
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.FirstName, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.FirstName, "", new { @class = "text-danger" })
-        </div>
-    </div>
+        @Html.Label("Photo", "Photo")
+        @Html.ValidationMessageFor(m => m.Photo, " *", new { @class = "text-danger" })
+        @Html.TextBox("Photo", null, new { @class = "form-control" })
+    </div><br />
 
-    <div class="form-group">
-        <div class="control-label col-md-2">
-            <h6>Second name</h6>
-        </div>
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.SecondName, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.SecondName, "", new { @class = "text-danger" })
+    <div class="row text-center">
+        <div class="col-md-12">
+            <button class="btn btn-success justify-content-center" type="submit">Modify doc</button>
         </div>
     </div>
-
-    <div class="form-group">
-        <div class="control-label col-md-2">
-            <h6>Pick a specialization</h6>
-        </div>
-        <div class="col-md-10">
-            @Html.DropDownListFor(model => model.SpecializationID, new SelectList(ViewBag.specializations, "Value", "Text"),
-         "No specialization selected", new { @class = "form-control" })
-            @Html.ValidationMessage("SpecializationID", "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        <div class="control-label col-md-2">
-            <h6>Can be booked?</h6>
-        </div>
-        <div class="col-md-10">
-            <div class="checkbox">
-                @Html.EditorFor(model => model.IsAvailable)
-                @Html.ValidationMessageFor(model => model.IsAvailable, "", new { @class = "text-danger" })
-            </div>
-        </div>
-    </div>
-
-    <div class="form-group">
-        <div class="control-label col-md-2">
-            <h6>Price rate</h6>
-        </div>
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.PriceRate, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.PriceRate, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        <div class="control-label col-md-2">
-            <h6>Phone number</h6>
-        </div>
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.PhoneNumber, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.PhoneNumber, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        <div class="control-label col-md-2">
-            <h6>Email</h6>
-        </div>
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-        <div class="control-label col-md-2">
-            <h6>Photo URL</h6>
-        </div>
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.Photo, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Photo, "", new { @class = "text-danger" })
-        </div>
-    </div>
-
-    <div class="form-group">
-		<div class="col-md-offset-2 col-md-10">
-			<input type="submit" value="Save" class="btn btn-success" />
-				<a class="btn btn-info" href="/Doctors">Back</a>
-		</div>
-    </div>
-</div>
-}
-<br/><hr/>
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+    <br />
+</form>
