--- a/PDP/PDP/Views/Shared/_Layout.cshtml
+++ b/PDP/PDP/Views/Shared/_Layout.cshtml
@@ -6,6 +6,9 @@
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/bundles/jquery")
+    @Scripts.Render("~/bundles/bootstrap")
+    @RenderSection("Scripts", required: false)
 </head>
 <style>
 body { background: linear-gradient( rgba(0, 0, 0, 0.15), rgba(0, 0, 0, 0.15) ); background-image: url('https://img.freepik.com/free-vector/clean-medical-background-vector_53876-140865.jpg?w=1380&t=st=1670630315~exp=1670630915~hmac=0c94813e76a410487fc3362da95f04206fb45cd544817a337afe7c568f880908'); background-size: cover; background-attachment: fixed; background-position: center; }
@@ -63,6 +66,5 @@ a {
 	</div>
 	@Scripts.Render("~/bundles/jquery")
 	@Scripts.Render("~/bundles/bootstrap")
-	@RenderSection("scripts", required: false)
 </body>
 </html>
